--- a/index.html
+++ b/index.html
@@ -34,24 +34,25 @@
         <p class="tile__title"><span>< </span>Time Tracking Dashboard<span> /></span><p>  
       </a>
     </div>
-        <div class="project-tile">
+    <div class="project-tile">
       <a class="tile__link" href="https://crolette.github.io/age-calculator/">
         <img class="tile__image" src="https://github.com/crolette/age-calculator/raw/origin/images/screenshot.png" alt="Frontend Mentor - Age calculator by Crolweb"/>
-        <p class="tile__title"><span>< </span>Time Tracking Dashboard<span> /></span><p>  
+        <p class="tile__title"><span>< </span>Age Calculator<span> /></span><p>  
       </a>
     </div>
-        <div class="project-tile">
+    <div class="project-tile">
       <a class="tile__link" href="https://crolette.github.io/social-media-dashboard-with-theme-switcher/">
         <img class="tile__image" src="https://github.com/crolette/social-media-dashboard-with-theme-switcher/raw/main/images/screen1.png" alt="Frontend Mentor - Social Media Dashboard by Crolweb"/>
-        <p class="tile__title"><span>< </span>Time Tracking Dashboard<span> /></span><p>  
+        <p class="tile__title"><span>< </span>Social Media Dashboard<span> /></span><p>  
       </a>
     </div>
-        <div class="project-tile">
+    <div class="project-tile">
       <a class="tile__link" href="https://crolette.github.io/summary-component/">
-        <img class="tile__image" src="https://github.com/crolette/summary-component/raw/main/images/desktop-preview.png" alt="Frontend Mentor - Time Tracking Dashboard by Crolweb"/>
-        <p class="tile__title"><span>< </span>Time Tracking Dashboard<span> /></span><p>  
+        <img class="tile__image" src="https://github.com/crolette/blog-preview-card-main/raw/main/images/screenshot.png" alt="Frontend Mentor - Blog Preview Card by Crolweb"/>
+        <p class="tile__title"><span>< </span>Blog Preview Card<span> /></span><p>  
       </a>
     </div>
+    
   </div>
 </section>
 <section id="contact">
